<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">西科失物招领</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_page1">欢迎使用失物招领软件！</string>
    <string name="hello_world">HelloWorld</string>

    <string name="title_activity_main_add">MainAddActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入电话号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_publish_info">PublishInfoActivity</string>
    <string name="choose_lost_type">请选择失物类型</string>
    <string name="LostPlace">丢失地点：</string>
    <string name="LostTime">丢失时间：</string>
    <string name="PostPicture">上传图片</string>
    <string name="submit">提交</string>
    <string name="choose_found_type">请选择拾物类型</string>
    <string name="FoundPlace">拾物地点：</string>
    <string name="FoundTime">拾物时间：</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_refresh_lasttime">最近更新</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_doing_end_refresh">加载中</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新</string>
    <string name="forget_password">忘记密码</string>
    <string name="reply">回复</string>
</resources>
